--- a/ui/customer/maintenance.html
+++ b/ui/customer/maintenance.html
@@ -526,6 +526,7 @@ html[data-theme="dark"] .chev{ background:rgba(255,255,255,0.03); }
   <main class="main">
     <div class="topbar">
       <div class="pageTitle">
+         <img src="https://webex.onenecklab.com/assets/ussignal-logo.jpg" />
         <h1>Webex Maintenance</h1>
         <p>Commercial and Government maintenance windows, filtered by product and region.</p>
       </div>
