--- a/ui/customer/maintenance.html
+++ b/ui/customer/maintenance.html
@@ -504,6 +504,7 @@ html[data-theme="dark"] .chev{ background:rgba(255,255,255,0.03); }
 
   <aside class="sidebar">
     <div class="brand">
+       <img src="https://webex.onenecklab.com/assets/ussignal-logo.jpg" />
       <div class="title">US Signal</div>
       <div class="sub">Webex Partner Portal</div>
     </div>
