--- a/ui/customer/maintenance.html
+++ b/ui/customer/maintenance.html
@@ -494,7 +494,24 @@ html[data-theme="dark"] .chev{ background:rgba(255,255,255,0.03); }
   background:var(--border);
   margin:10px 0;
 }
+.brand{
+  display:flex;
+  align-items:center;
+  gap:12px;
+}
 
+.brand img{
+  height:38px;
+}
+   .topbar{
+  display:flex;
+  align-items:center;
+  gap:12px;
+}
+
+.topbar img{
+  height:38px;
+}
 </style>
 </head>
 
