--- a/ui/customer/maintenance.html
+++ b/ui/customer/maintenance.html
@@ -101,9 +101,7 @@ body{
   color:var(--muted);
   font-size:12px;
 }
-   .brand img{
-  height:38px;
-}
+  .brand img { height:34px; }
 
 .nav{
   display:flex;
@@ -144,7 +142,7 @@ body{
   gap:14px;
 }
    .topbar img{
-  height:38px;
+  height:34px;
 }
 
 .pageTitle{
