--- a/ui/customer/status.html
+++ b/ui/customer/status.html
@@ -456,6 +456,7 @@
     <aside class="sidebar">
       <div class="brand">
         <!-- Inline "US Signal" mark so it works anywhere -->
+        <img src="https://webex.onenecklab.com/assets/ussignal-logo.jpg">
         <svg width="34" height="34" viewBox="0 0 64 64" aria-hidden="true">
           <defs>
             <linearGradient id="g" x1="0" y1="0" x2="1" y2="1">
@@ -466,7 +467,7 @@
           <rect x="6" y="6" width="52" height="52" rx="14" fill="url(#g)"/>
           <path d="M20 36c6 6 18 6 24 0" fill="none" stroke="white" stroke-width="5" stroke-linecap="round"/>
           <path d="M20 28c6-6 18-6 24 0" fill="none" stroke="white" stroke-width="5" stroke-linecap="round" opacity=".9"/>
-        </svg>
+        </img>
         <div>
           <h1>US Signal <span class="sub">Webex Calling Portal</span></h1>
         </div>
