--- a/ui/customer/status.html
+++ b/ui/customer/status.html
@@ -87,7 +87,7 @@
       border-bottom:1px solid var(--line);
       margin-bottom:14px;
     }
-    .brand svg{ flex:0 0 auto; }
+    .brand img{ flex:0 0 auto; }
     .brand h1{
       font-size:14px;
       line-height:1.2;
