--- a/ui/customer/maintenance.html
+++ b/ui/customer/maintenance.html
@@ -100,12 +100,9 @@ body{
 .brand .sub{
   color:var(--muted);
   font-size:12px;
-.brand img,
+.brand img{ height:34px;
 .topbar img{
   height:34px;
-  width:auto;
-  object-fit:contain;
-  display:block;
 }
 
 .nav{
