--- a/ui/customer/status.html
+++ b/ui/customer/status.html
@@ -444,34 +444,24 @@
       font-size:12px;
       line-height:1.35;
     }
+    .logo{
+  display:flex;
+  align-items:center;
+  gap:12px;
+}
+
+.logo img{
+  height:38px;
+}
   </style>
 </head>
 
 <body>
-  <div class="app">
-
-    <!-- =========================
-         LEFT NAV
-    ========================== -->
-    <aside class="sidebar">
-      <div class="brand">
-        <!-- Inline "US Signal" mark so it works anywhere -->
-        <img src="https://webex.onenecklab.com/assets/ussignal-logo.jpg">
-        <svg width="34" height="34" viewBox="0 0 64 64" aria-hidden="true">
-          <defs>
-            <linearGradient id="g" x1="0" y1="0" x2="1" y2="1">
-              <stop offset="0" stop-color="var(--accent)"/>
-              <stop offset="1" stop-color="var(--accent2)"/>
-            </linearGradient>
-          </defs>
-          <rect x="6" y="6" width="52" height="52" rx="14" fill="url(#g)"/>
-          <path d="M20 36c6 6 18 6 24 0" fill="none" stroke="white" stroke-width="5" stroke-linecap="round"/>
-          <path d="M20 28c6-6 18-6 24 0" fill="none" stroke="white" stroke-width="5" stroke-linecap="round" opacity=".9"/>
-        </img>
-        <div>
-          <h1>US Signal <span class="sub">Webex Calling Portal</span></h1>
-        </div>
-      </div>
+<div class="header">
+  <div class="logo">
+    <img src="https://webex.onenecklab.com/assets/ussignal-logo.jpg" />
+    <h1>Webex Status</h1>
+  </div>
 
       <div class="nav">
         <a href="/customer">Dashboard</a>
