--- a/ui/customer/maintenance.html
+++ b/ui/customer/maintenance.html
@@ -100,11 +100,10 @@ body{
 .brand .sub{
   color:var(--muted);
   font-size:12px;
-.brand img{ height:34px;
-.topbar img{
-  height:34px;
-}
 
+.brand img{
+  height:38px;
+}
 .nav{
   display:flex;
   flex-direction:column;
@@ -500,6 +499,7 @@ html[data-theme="dark"] .chev{ background:rgba(255,255,255,0.03); }
 </head>
 
 <body>
+   
 
 <div class="shell">
 
@@ -528,7 +528,6 @@ html[data-theme="dark"] .chev{ background:rgba(255,255,255,0.03); }
   <main class="main">
     <div class="topbar">
       <div class="pageTitle">
-         <img src="https://webex.onenecklab.com/assets/ussignal-logo.jpg" />
         <h1>Webex Maintenance</h1>
         <p>Commercial and Government maintenance windows, filtered by product and region.</p>
       </div>
