--- a/ui/customer/maintenance.html
+++ b/ui/customer/maintenance.html
@@ -533,10 +533,20 @@ html[data-theme="dark"] .chev{ background:rgba(255,255,255,0.03); }
       </div>
 
       <div class="actions">
-        <button id="btnTheme" class="btn" type="button">Toggle Theme</button>
-        <button id="btnRefresh" class="btn primary" type="button">Refresh</button>
-      </div>
-    </div>
+  <a 
+    href="https://status.webex.com/maintenance?lang=en_US" 
+    target="_blank" 
+    rel="noopener noreferrer"
+    class="btn"
+    style="text-decoration:none; display:inline-flex; align-items:center;"
+  >
+    Webex Maintenance
+  </a>
+
+  <button id="btnTheme" class="btn" type="button">Toggle Theme</button>
+  <button id="btnRefresh" class="btn primary" type="button">Refresh</button>
+</div>
+
 
     <div class="content">
 
