--- a/ui/customer/maintenance.html
+++ b/ui/customer/maintenance.html
@@ -100,10 +100,14 @@ body{
 .brand .sub{
   color:var(--muted);
   font-size:12px;
+}
 
 .brand img{
   height:38px;
+  width:auto;
+  display:block;
 }
+
 .nav{
   display:flex;
   flex-direction:column;
