--- a/ui/customer/maintenance.html
+++ b/ui/customer/maintenance.html
@@ -550,7 +550,7 @@ html[data-theme="dark"] .chev{ background:rgba(255,255,255,0.03); }
   <button id="btnTheme" class="btn" type="button">Toggle Theme</button>
   <button id="btnRefresh" class="btn primary" type="button">Refresh</button>
 </div>
-
+</div>
 
     <div class="content">
 
